--- a/Udacity-Developing-Android-Apps-with-Kotlin/andfun-kotlin-gdg-finder-starter-code/app/src/main/AndroidManifest.xml
+++ b/Udacity-Developing-Android-Apps-with-Kotlin/andfun-kotlin-gdg-finder-starter-code/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <!-- To access the location we need to ask for permission -->
     <!-- see https://developer.android.com/training/location/retrieve-current.html -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
             android:usesCleartextTraffic="true"
